@font-face: unquoted local font names containing spaces don't work https://bugs.webkit.org/show_bug.cgi?id=64783

Source/WebCore:

Allows local font names with spaces.
Rejects the src descriptor if there is invalid identifiers in local(), as the same as Firefox.

Reviewed by Ryosuke Niwa.

Tests: fast/css/font-face-unquoted-local-expected.html
       fast/css/font-face-unquoted-local.html

* css/CSSParser.cpp:
(WebCore::parseFontFaceSrcFunction): Added. Treats multiple identifiers in local() as a font name separated by spaces.
(WebCore::CSSParser::parseFontFaceSrc): Moved the code block which parses local() and format() to parseFontFaceSrcFunction().

LayoutTests:

Adds a test which makes sure that unquoted local font names contains spaces are allowed.

Reviewed by Ryosuke Niwa.

* fast/css/font-face-unquoted-local-expected.html: Added.
* fast/css/font-face-unquoted-local.html: Added.


Canonical link: https://commits.webkit.org/89985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101504 268f45cc-cd09-0410-ab3c-d52691b4dbfc